2020-07-31
  added assembly map verification for all species
  added chinchilla to list of processed species

2020-05-28
  replaced some custom sql queries with rgdcore equivalents for better code maintainability

2020-05-27
  fixed Ensembl query for dog

2020-04-16
  added logging of xdb ids
  added script run_ensembl.sh that was used on PROD but never had been committed to git

2020-03-16
  tuned up logging
  
2020-03-10
  new genes: nomenclature event (status='PROVISIONAL') with ref_key=20683 is automatically generated only for RAT genes

2020-03-05
  new genes: when added, a nomenclature event (status='PROVISIONAL') with ref_key=20683 is automatically generated
  code refactored to handle rgdcore API changes for NCBI and Ensembl assembly maps